--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,10 +30,10 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:src="@drawable/ic_clean"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toStartOf="@+id/image_draw_brush"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
 
         <ImageButton
             android:id="@+id/image_draw_brush"
@@ -45,9 +45,9 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:src="@drawable/ic_brush_black_24dp"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toStartOf="@+id/image_draw_width"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
 
 
         <ImageButton
@@ -61,9 +61,9 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:src="@drawable/ic_adjust_black_24dp"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toStartOf="@+id/image_draw_color"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
 
         <ImageButton
             android:id="@+id/image_draw_color"
@@ -75,9 +75,9 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:src="@drawable/ic_color_lens_black_24dp"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toStartOf="@+id/image_draw_undo"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
 
         <ImageButton
             android:id="@+id/image_draw_undo"
@@ -89,9 +89,9 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:src="@drawable/ic_undo_black_24dp"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toStartOf="@+id/image_draw_redo"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
 
         <ImageButton
             android:id="@+id/image_draw_redo"
@@ -103,9 +103,9 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:src="@drawable/ic_redo_black_24dp"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
 
         <SeekBar
             android:id="@+id/seekBar_width"
@@ -131,12 +131,9 @@
         android:id="@+id/drawing"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
         android:background="@color/viewBackground"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="-16dp" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/linearLayout2"
@@ -159,9 +156,9 @@
             android:paddingRight="8dp"
             android:paddingBottom="10dp"
             android:src="@drawable/new_add"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toStartOf="@+id/saveBtn"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
 
         <ImageButton
             android:id="@+id/saveBtn"
@@ -174,9 +171,9 @@
             android:paddingRight="16dp"
             android:paddingBottom="10dp"
             android:src="@drawable/ic_save_black_24dp"
-            android:tint="@color/icon_color"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:tint="@color/icon_color" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
